--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#03A9F4</color>
+    <color name="colorSecondary">#FFEB3B</color>
+    <color name="colorLayout">#DEEBF7</color>
 </resources>
