--- a/app/src/main/res/layout/activity_halaman2.xml
+++ b/app/src/main/res/layout/activity_halaman2.xml
@@ -87,28 +87,36 @@
 
                 <include
                     android:id="@+id/layout_phone"
-                    layout="@layout/layout_menu_phone"
+                    layout="@layout/layout_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"/>
 
                 <include
                     android:id="@+id/layout_email"
-                    layout="@layout/layout_menu_email"
+                    layout="@layout/layout_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"/>
 
                 <include
                     android:id="@+id/layout_location"
-                    layout="@layout/layout_menu_alamat"
+                    layout="@layout/layout_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"/>
 
                 <include
                     android:id="@+id/layout_ig"
-                    layout="@layout/layout_menu_ig"
+                    layout="@layout/layout_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"/>
+
+                <include
+                    android:id="@+id/layoutBuku"
+                    layout="@layout/layout_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
